--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ fabric.properties
 .mtj.tmp/
 
 # Package Files #
+
 *.jar
 *.war
 *.nar
@@ -202,3 +203,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,linux,visualstudiocode,intellij,gradle
+
+
+!**/libs/*.jar
